base/404page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-404-service
  namespace: default
spec:
  selector:
    app: custom-404
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
